// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-time-picker #render help should render component as expected 1`] = `
<gux-form-field-time-picker>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <div class="gux-above gux-form-field-legend-label">
        <legend>
          <slot name="label"></slot>
          <gux-screen-reader-beta>
            <mock:shadow-root>
              <span class="gux-sr-only">
                <slot></slot>
              </span>
            </mock:shadow-root>
            Required
          </gux-screen-reader-beta>
        </legend>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-time-picker-container">
            <slot></slot>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-time-picker aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" value="09:00"></gux-time-picker>
  <label for="gux-form-field-input-i" slot="label">
    Select Time
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-time-picker>
`;

exports[`gux-form-field-time-picker #render intervals should render component as expected (1) 1`] = `
<gux-form-field-time-picker>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <div class="gux-above gux-form-field-legend-label">
        <legend>
          <slot name="label"></slot>
          <gux-screen-reader-beta>
            <mock:shadow-root>
              <span class="gux-sr-only">
                <slot></slot>
              </span>
            </mock:shadow-root>
            Required
          </gux-screen-reader-beta>
        </legend>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-time-picker-container">
            <slot></slot>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-time-picker id="gux-form-field-input-i" interval="15" value="07:00"></gux-time-picker>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-time-picker>
`;

exports[`gux-form-field-time-picker #render intervals should render component as expected (2) 1`] = `
<gux-form-field-time-picker>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <div class="gux-above gux-form-field-legend-label">
        <legend>
          <slot name="label"></slot>
          <gux-screen-reader-beta>
            <mock:shadow-root>
              <span class="gux-sr-only">
                <slot></slot>
              </span>
            </mock:shadow-root>
            Required
          </gux-screen-reader-beta>
        </legend>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-time-picker-container">
            <slot></slot>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-time-picker id="gux-form-field-input-i" interval="30" value="07:00"></gux-time-picker>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-time-picker>
`;

exports[`gux-form-field-time-picker #render intervals should render component as expected (3) 1`] = `
<gux-form-field-time-picker>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <div class="gux-above gux-form-field-legend-label">
        <legend>
          <slot name="label"></slot>
          <gux-screen-reader-beta>
            <mock:shadow-root>
              <span class="gux-sr-only">
                <slot></slot>
              </span>
            </mock:shadow-root>
            Required
          </gux-screen-reader-beta>
        </legend>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-time-picker-container">
            <slot></slot>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-time-picker id="gux-form-field-input-i" interval="60" value="07:00"></gux-time-picker>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-time-picker>
`;

exports[`gux-form-field-time-picker #render label-position should render component as expected (1) 1`] = `
<gux-form-field-time-picker>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <div class="gux-above gux-form-field-legend-label">
        <legend>
          <slot name="label"></slot>
          <gux-screen-reader-beta>
            <mock:shadow-root>
              <span class="gux-sr-only">
                <slot></slot>
              </span>
            </mock:shadow-root>
            Required
          </gux-screen-reader-beta>
        </legend>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-time-picker-container">
            <slot></slot>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-time-picker id="gux-form-field-input-i" value="07:00"></gux-time-picker>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-time-picker>
`;

exports[`gux-form-field-time-picker #render label-position should render component as expected (2) 1`] = `
<gux-form-field-time-picker label-position="above">
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <div class="gux-above gux-form-field-legend-label">
        <legend>
          <slot name="label"></slot>
          <gux-screen-reader-beta>
            <mock:shadow-root>
              <span class="gux-sr-only">
                <slot></slot>
              </span>
            </mock:shadow-root>
            Required
          </gux-screen-reader-beta>
        </legend>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-time-picker-container">
            <slot></slot>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-time-picker id="gux-form-field-input-i" value="07:00"></gux-time-picker>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-time-picker>
`;

exports[`gux-form-field-time-picker #render label-position should render component as expected (3) 1`] = `
<gux-form-field-time-picker label-position="beside">
  <mock:shadow-root>
    <fieldset class="gux-beside gux-form-field-fieldset-container">
      <div class="gux-beside gux-form-field-legend-label">
        <legend>
          <slot name="label"></slot>
          <gux-screen-reader-beta>
            <mock:shadow-root>
              <span class="gux-sr-only">
                <slot></slot>
              </span>
            </mock:shadow-root>
            Required
          </gux-screen-reader-beta>
        </legend>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-time-picker-container">
            <slot></slot>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-time-picker id="gux-form-field-input-i" value="07:00"></gux-time-picker>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-time-picker>
`;

exports[`gux-form-field-time-picker #render label-position should render component as expected (4) 1`] = `
<gux-form-field-time-picker label-position="screenreader">
  <mock:shadow-root>
    <fieldset class="gux-form-field-fieldset-container gux-screenreader">
      <div class="gux-form-field-legend-label gux-screenreader">
        <legend>
          <slot name="label"></slot>
          <gux-screen-reader-beta>
            <mock:shadow-root>
              <span class="gux-sr-only">
                <slot></slot>
              </span>
            </mock:shadow-root>
            Required
          </gux-screen-reader-beta>
        </legend>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-time-picker-container">
            <slot></slot>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-time-picker id="gux-form-field-input-i" value="07:00"></gux-time-picker>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-time-picker>
`;
